<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.daniel.wil13458204_mobilecomputing.MyAccount"
    tools:showIn="@layout/app_bar_my_account"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/custom_border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ChangePassText"
            android:gravity="center"
            android:textSize="10dp"
            android:textColor="@color/colorText"
            android:layout_marginTop="5dp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ChangePass"
            android:id="@+id/btnChangePass"
            android:layout_below="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:onClick="ChangePassword"
            android:textSize="15dp"
            android:textColor="@color/colorText"
            android:background="@drawable/custom_button_shape"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/custom_border"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RemoveFavsText"
            android:gravity="center"
            android:textSize="10dp"
            android:textColor="@color/colorText"
            android:layout_marginTop="5dp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/RemoveAllFavs"
            android:id="@+id/btnClearFavourites"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:onClick="ClearMyFavourites"
            android:textSize="15dp"
            android:textColor="@color/colorText"
            android:background="@drawable/custom_button_shape"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/custom_border"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/RemoveHistoryText"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:textSize="10dp"
            android:textColor="@color/colorText"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ClearHistorybtn"
            android:id="@+id/btnClearSearchHistory"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:onClick="ClearSearchHistory"
            android:textSize="15dp"
            android:textColor="@color/colorText"
            android:background="@drawable/custom_button_shape"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/custom_border"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ClearAppDataText"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:textSize="10dp"
            android:textColor="@color/colorText"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ClearAppDatabtn"
            android:id="@+id/btnClearAppData"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:onClick="ClearAppData"
            android:textSize="15dp"
            android:textColor="@color/colorText"
            android:background="@drawable/custom_button_shape"/>
    </LinearLayout>


</LinearLayout>
