<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.daniel.wil13458204_mobilecomputing.ChangeResetPassword"
    tools:showIn="@layout/app_bar_change_reset_password"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/custom_border">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/PasswordChangeUniqueUsername"
            android:layout_marginTop="10dp"/>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etUsername"
            android:layout_marginTop="2dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/RetriveSQButton"
            android:id="@+id/btnGetSQ"
            android:layout_below="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:onClick="SecureQuestionRecovery"
            android:textSize="15dp"
            android:textColor="@color/colorText"
            android:background="@drawable/custom_button_shape"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/custom_border"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:id="@+id/layPasschangeLinear">

        <!-- RESET VIEWS-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/SQTextView"
            android:textSize="17dp"
            android:layout_marginTop="5dp"
            android:id="@+id/tvSecurityQuestion"
            android:visibility="invisible"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/SQATextView"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            android:id="@+id/tvSecurityAnswer" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etSecurityAnswer"
            android:layout_marginTop="2dp"
            android:visibility="invisible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/EnterPass"
            android:layout_marginTop="5dp"
            android:visibility="invisible"
            android:id="@+id/tvNewPass" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etNewPass"
            android:layout_marginTop="2dp"
            android:visibility="invisible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text = "@string/ReEnterPass"
            android:layout_marginTop="5dp"
            android:visibility="invisible"
            android:id="@+id/tvReNewPass" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etReNewPass"
            android:layout_marginTop="2dp"
            android:visibility="invisible" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ChangePass"
            android:id="@+id/btnChangePass"
            android:layout_below="@+id/etPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:onClick="ChangePassword"
            android:textSize="15dp"
            android:textColor="@color/colorText"
            android:visibility="invisible"
            android:background="@drawable/custom_button_shape"/>
    </LinearLayout>

</LinearLayout>
